HTML Overflow Correction

--- a/themes/jenner-ui/assets/scss/globals/_cglobals.scss
+++ b/themes/jenner-ui/assets/scss/globals/_cglobals.scss
@@ -3,12 +3,7 @@
 html {
 	box-sizing: border-box;
 	font-size: 62.5%; /* Now 10px = 1rem! */
-}
-
-html,
-body {
 	overflow-x: hidden;
-	width: 100%;
 }
 
 *,
